--- a/button.html
+++ b/button.html
@@ -13,7 +13,7 @@
 <h2>HTML Buttons</h2>
 <p>HTML buttons are defined with the button tag:</p>
 
-<button href="Pythondummy.github.io/images.html class="button">to cat photo's</button>
-<button href="Pythondummy.github.io/index.html class="button">back to main</button>
+<button href="Pythondummy.github.io/images.html" class="button">to cat photo's</button>
+<button href="Pythondummy.github.io/index.html" class="button">back to main</button>
 </body>
 </html>
