--- a/button.html
+++ b/button.html
@@ -14,6 +14,6 @@
 <p>HTML buttons are defined with the button tag:</p>
 
 <button href="Pythondummy.github.io/images.html" class="button">to cat photo's</button>
-<button href="Pythondummy.github.io/index.html" class="button">back to main</button>
+  <button class="button"><a href="Pythondummy.github.io/index.html">back to main</a></button>
 </body>
 </html>
