--- a/button.html
+++ b/button.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-<h2>HTML Buttons</h2>
-<p>HTML buttons are defined with the button tag:</p>
+<h2>hmmmmmm wich of the 2 buttons will i click</h2>
+<p>this are some very random buttons for no reason</p>
 
-<button href="Pythondummy.github.io/images.html" class="button">to cat photo's</button>
+<button class="button"><a href="Pythondummy.github.io/images.html">to random images taken from programming websites</a></button>
   <button class="button"><a href="Pythondummy.github.io/index.html">back to main</a></button>
 </body>
 </html>
