--- a/button.html
+++ b/button.html
@@ -14,6 +14,6 @@
 <p>this are some very random buttons for no reason</p>
 
 <button class="button"><a href="images.html">to random images taken from programming websites</a></button>
-  <button class="button"><a href="index.html">back to main</a></button>
+  <button class="button"><a href="pythondummy.github.io">back to main</a></button>
 </body>
 </html>
