--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>copy for sure</title>
+        <title>task programming</title>
         <style>
             #party {
                 color : red;
