--- a/images.html
+++ b/images.html
@@ -11,6 +11,6 @@
 <a href="Pyhtondummy.github.io/special.html">
 <img src="https://www.kasandbox.org/programming-images/food/chocolates.png" alt="chocolates" width="203"> 
 </a>
-<a href="Pythondummy.github.io/buttons.html">go back</a>
+<a href="Pythondummy.github.io/button.html">go back</a>
 </body>
 </html>
