--- a/button.html
+++ b/button.html
@@ -13,7 +13,7 @@
 <h2>hmmmmmm wich of the 2 buttons will i click</h2>
 <p>this are some very random buttons for no reason</p>
 
-<button class="button"><a href="Pythondummy.github.io/images.html">to random images taken from programming websites</a></button>
-  <button class="button"><a href="pythondummy.github.io/index.html">back to main</a></button>
+<button class="button"><a href="https://pythondummy.github.io/Pythondummy.github.io/images.html">to random images taken from programming websites</a></button>
+  <button class="button"><a href="https://pythondummy.github.io/">back to main</a></button>
 </body>
 </html>
