--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div> 
       <h1>some other pages on my site</h1>
       <h3><a href="Pythondummy.github.io/button.html"> some dumb button</a></h3>
-      <h3><a href="Pythondummy.github.io/images.html"> iamges of cats</a></h3>
+      <h3><a href="Pythondummy.github.io/images.html"> image of an cat</a></h3>
       <h3><a href="Pythondummy.github.io/surprise.html"> something special</a></h3>
     </body>
 </html>
