--- a/images.html
+++ b/images.html
@@ -11,6 +11,6 @@
 <a href="Pyhtondummy.github.io/special.html">
 <img src="https://www.kasandbox.org/programming-images/food/chocolates.png" alt="chocolates" width="203"> 
 </a>
-  <p><a href="Pythondummy.github.io/button.html">go back</a></p>
+  <p><a href="https://pythondummy.github.io/">go back</a></p>
 </body>
 </html>
