--- a/button.html
+++ b/button.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <style>
+  h3{
+    background-color:white;
+  }
   body {
     background-color:red;
   }
@@ -13,7 +16,7 @@
 <h2>hmmmmmm wich of the 2 buttons will i click</h2>
 <p>this are some very random buttons for no reason</p>
 
-<button class="button"><a href="Pythondummy.github.io/images.html">back to main</a></button>
+  <h3><a href="Pythondummy.github.io/images.html">images</a></h3>
   <button class="button"><a href="https://pythondummy.github.io/">back to main</a></button>
 </body>
 </html>
