--- a/button.html
+++ b/button.html
@@ -16,7 +16,7 @@
 <h2>hmmmmmm wich of the 2 buttons will i click</h2>
 <p>this are some very random buttons for no reason</p>
 
-  <h3><a href="Pythondummy.github.io/images.html">images</a></h3>
+  <div><h3><a href="Pythondummy.github.io/images.html">images</a></h3></div>
   <button class="button"><a href="https://pythondummy.github.io/">back to main</a></button>
 </body>
 </html>
