--- a/images.html
+++ b/images.html
@@ -8,7 +8,7 @@
 
 <img src="https://www.kasandbox.org/programming-images/animals/birds_rainbow-lorakeets.png" alt="some birds" width="203";border:0;>
 <img src="https://www.kasandbox.org/programming-images/animals/cat.png" alt="a cat" width="203">
-<a href="Pyhtondummy.github.io/special.html">
+<a href="Pyhtondummy.github.io/surprise.html">
 <img src="https://www.kasandbox.org/programming-images/food/chocolates.png" alt="chocolates" width="203"> 
 </a>
   <p><a href="https://pythondummy.github.io/">go back</a></p>
