--- a/surprise.html
+++ b/surprise.html
@@ -9,6 +9,6 @@ body {
 </head>
 <body>
 <h1>yep so nice isnt it</h1>
-<img href="http://www.reddit.com/r/oddlysatisfying/comments/3zookm/turning_on_a_chocolate_fountain_oc/" alt="Computer man" style="width:48px;height:48px;">
+<p><a href="http://www.reddit.com/r/oddlysatisfying/comments/3zookm/turning_on_a_chocolate_fountain_oc/">choclate is the hint</a></p>
 </body>
 </html>
