--- a/surprise.html
+++ b/surprise.html
@@ -9,6 +9,6 @@ body {
 </head>
 <body>
 <h1>yep so nice isnt it</h1>
-<p><a href="http://www.reddit.com/r/oddlysatisfying/comments/3zookm/turning_on_a_chocolate_fountain_oc/">choclate is the hint</a></p>
+<p><a href="https://gfycat.com/ValuableEvergreenGartersnake">choclate is the hint</a></p>
 </body>
 </html>
