--- a/button.html
+++ b/button.html
@@ -2,9 +2,6 @@
 <html>
 <head>
 <style>
-  h3{
-    background-color:white;
-  }
   body {
     background-color:red;
   }
@@ -16,7 +13,7 @@
 <h2>hmmmmmm wich of the 2 buttons will i click</h2>
 <p>this are some very random buttons for no reason</p>
 
-  <div><h3><a href="Pythondummy.github.io/images.html">images</a></h3></div>
+  <h3><a href="Pythondummy.github.io/images.html"> image of an cat</a></h3>
   <button class="button"><a href="https://pythondummy.github.io/">back to main</a></button>
 </body>
 </html>
